--- a/index.html
+++ b/index.html
@@ -7,23 +7,77 @@
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/global.css">
   <link rel="stylesheet" href="css/table.css">
+  <link rel="stylesheet" href="css/modal.css">
 </head>
+
 <body class="wrapper">
+
   <table id="table" class="table table-striped">
     <thead id="thead" class="thead-dark">
       <tr class="table__tr">
         <th>ID</th>
         <th>First Name</th>
         <th>Last Name</th>
-        <th>Created date</th>
         <th>Position</th>
+        <th>Created date</th>
         <th>Operate</th>
       </tr>
     </thead>
     <tbody id="tbody">
     </tbody>
   </table>
-  <input type="button" class="btn btn-success float-right" value="Add New" onclick="generateRow()">
+  
+  <button id="add-new" type="button" class="btn btn-primary btn-success float-right" data-toggle="modal" data-target="#exampleModal">
+    Add New
+  </button>
+
+  <div id="modal-window" class="modal">
+    <div class="modal__content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Add a new employee</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="input-group mb-3">
+          <div class="input-group-prepend">
+            <span class="input-group-text" id="inputGroup-sizing-default">First Name</span>
+          </div>
+          <input type="text" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default">
+        </div>
+        <div class="input-group mb-3">
+          <div class="input-group-prepend">
+            <span class="input-group-text" id="inputGroup-sizing-default">Last Name</span>
+          </div>
+          <input type="text" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default">
+        </div>
+        <div class="input-group mb-3">
+          <div class="input-group-prepend">
+            <div class="btn modal__btn-name">Position</div>
+          </div>
+          <select class="custom-select" id="inputGroupSelect03">
+            <option selected>Choose..</option>
+            <option value="Front-end dev">Front-end dev</option>
+            <option value="Back-end dev">Back-end dev</option>
+            <option value="Full stack dev">Full stack dev</option>
+            <option value="Mobile dev">Mobile dev</option>
+            <option value="Web designer">Web designer</option>
+            <option value="HR">HR</option>
+            <option value="Tester">Tester</option>
+            <option value="Service manager">Service manager</option>
+          </select>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- onclick="generateRow()" -->
+
   <script src="js/index.js"></script>
+  <script src="js/modal-window.js"></script>
 </body>
 </html>
