--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/global.css">
   <link rel="stylesheet" href="css/table.css">
   <link rel="stylesheet" href="css/modal.css">
+  <script src="js/table-items.js"></script>
 </head>
 
 <body class="wrapper">
@@ -24,6 +25,7 @@
       </tr>
     </thead>
     <tbody id="tbody">
+      <script>displayRow();</script>
     </tbody>
   </table>
   
@@ -39,16 +41,16 @@
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <div class="modal-body">
+      <form id="modal-form" class="modal-body">
         <div class="input-group mb-3">
           <div class="input-group-prepend">
-            <span class="input-group-text" id="inputGroup-sizing-default">First Name</span>
+            <span class="input-group-text" id="first-name">First Name</span>
           </div>
           <input type="text" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default">
         </div>
         <div class="input-group mb-3">
           <div class="input-group-prepend">
-            <span class="input-group-text" id="inputGroup-sizing-default">Last Name</span>
+            <span class="input-group-text" id="last-name">Last Name</span>
           </div>
           <input type="text" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default">
         </div>
@@ -68,16 +70,13 @@
             <option value="Service manager">Service manager</option>
           </select>
         </div>
-      </div>
+      </а>
       <div class="modal-footer">
         <button type="button" class="btn btn-primary">Save changes</button>
       </div>
     </div>
   </div>
 
-  <!-- onclick="generateRow()" -->
-
-  <script src="js/index.js"></script>
   <script src="js/modal-window.js"></script>
 </body>
 </html>
