--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
           <div class="input-group-prepend">
             <span class="input-group-text">First Name</span>
           </div>
-          <input type="text" id="first-name" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default" required>
+          <input type="text" id="first-name" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default" minlength="3" pattern="[^\s]*" required>
         </div>
         <div class="input-group mb-3">
           <div class="input-group-prepend">
             <span class="input-group-text">Last Name</span>
           </div>
-          <input type="text" id="last-name" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default" required>
+          <input type="text" id="last-name" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default" minlength="3" pattern="[^\s]*" required>
         </div>
         <div class="input-group mb-3">
           <div class="input-group-prepend">
