--- a/index.html
+++ b/index.html
@@ -69,14 +69,13 @@
         </div>
       </а>
       <div class="modal-footer">
-        <button type="submit" id="modal-save-btn" class="btn btn-primary" onclick="addWorker()">
+        <button type="submit" id="modal-save-btn" class="btn btn-primary">
           Save changes
         </button>
       </div>
     </div>
   </div>
 
-  <script src="js/validation.js"></script>
   <script src="js/worker-factory.js"></script>
   <script src="js/get-local-worker.js"></script>
   <script src="js/set-local-worker.js"></script>
