--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
   <script src="js/set-local-worker.js"></script>
   <script src="js/create-worker.js"></script>
   <script src="js/generate-table.js"></script>
+  <script src="js/delete-worker.js"></script>
   <script src="js/index.js"></script>
 </body>
 </html>
