add edit button functionality

--- a/index.html
+++ b/index.html
@@ -77,11 +77,13 @@
   </div>
 
   <script src="js/worker-factory.js"></script>
+  <script src="js/modal.js"></script>
   <script src="js/get-local-worker.js"></script>
   <script src="js/set-local-worker.js"></script>
   <script src="js/create-worker.js"></script>
   <script src="js/generate-table.js"></script>
   <script src="js/delete-worker.js"></script>
+  <script src="js/edit-worker.js"></script>
   <script src="js/index.js"></script>
 </body>
 </html>
