--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   <script src="js/get-local-worker.js"></script>
   <script src="js/set-local-worker.js"></script>
   <script src="js/create-worker.js"></script>
-  <script src="js/generate-table.js"></script>
+  <script src="js/display-workers.js"></script>
   <script src="js/delete-worker.js"></script>
   <script src="js/edit-worker.js"></script>
   <script src="js/index.js"></script>
