--- a/index.html
+++ b/index.html
@@ -4,16 +4,43 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/global.css">
+  <link rel="stylesheet" href="css/filters.css">
   <link rel="stylesheet" href="css/table.css">
   <link rel="stylesheet" href="css/modal.css">
 </head>
 
 <body class="wrapper">
 
-  <table id="table" class="table table-striped">
-    <thead id="thead" class="thead-dark">
+  <div class="filters">
+    <div class="filters__block-left">
+      <button class="filters__btn">size</button>
+      <button class="filters__btn">column</button>
+      <div class="filters__btn filters__equal"><span>=</span></div>
+      <div class="filters__input-group">
+        <input type="text" class="filters__input">
+        <button type="button" class="filters__close">
+          <span>&times;</span>
+        </button> 
+      </div>
+    </div>
+    <div class="filters__block-right">
+      <div class="filters__input-group">
+        <input type="text" class="filters__input" placeholder="KEY">
+        <button type="button" class="filters__close">
+          <span>&times;</span>
+        </button> 
+      </div>
+      <button class="filters__btn">
+        <img src="img/filter-icon.png" alt="filter">
+      </button>
+    </div>
+  </div>
+
+  <table id="table" class="table">
+    <thead id="thead" class="thead-light">
       <tr class="table__tr">
         <th>ID</th>
         <th>First Name</th>
@@ -27,7 +54,7 @@
     </tbody>
   </table>
   
-  <button id="add-new" type="button" class="btn btn-primary btn-success float-right" data-toggle="modal" data-target="#exampleModal">
+  <button id="add-new" type="button" class="btn btn-primary btn-success float-left" data-toggle="modal" data-target="#exampleModal">
     Add New
   </button>
 
@@ -44,13 +71,13 @@
           <div class="input-group-prepend">
             <span class="input-group-text">First Name</span>
           </div>
-          <input type="text" id="first-name" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default" minlength="3" pattern="[^\s]*" required>
+          <input type="text" id="first-name" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default" minlength="3" required>
         </div>
         <div class="input-group mb-3">
           <div class="input-group-prepend">
             <span class="input-group-text">Last Name</span>
           </div>
-          <input type="text" id="last-name" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default" minlength="3" pattern="[^\s]*" required>
+          <input type="text" id="last-name" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default" minlength="3" required>
         </div>
         <div class="input-group mb-3">
           <div class="input-group-prepend">
