add the ability to search by values in the column

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
       <div class="filters__btn filters__equal"><span>=</span></div>
       <div class="filters__input-group">
-        <input type="text" class="filters__input">
+        <input type="text" class="filters__input" id="input-col-val">
         <button type="button" class="filters__close">
           <span>&times;</span>
         </button> 
@@ -112,7 +112,6 @@
     </div>
   </div>
 
-  <script src="js/dropdown.js"></script>
   <script src="js/worker-factory.js"></script>
   <script src="js/modal.js"></script>
   <script src="js/get-local-worker.js"></script>
