--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
   <table id="table" class="table">
     <thead id="thead" class="thead-light">
       <tr class="table__tr">
-        <th>ID</th>
+        <th>
+          <span>ID</span>
+          <img id="sort-arrow" src="img/sort-arrow.png" value="initial">
+        </th>
         <th>First Name</th>
         <th>Last Name</th>
         <th>Position</th>
@@ -111,6 +114,7 @@
   <script src="js/display-workers.js"></script>
   <script src="js/delete-worker.js"></script>
   <script src="js/edit-worker.js"></script>
+  <script src="js/sort-data.js"></script>
   <script src="js/index.js"></script>
 </body>
 </html>
