--- a/index.html
+++ b/index.html
@@ -44,13 +44,27 @@
       <tr class="table__tr">
         <th>
           <span>ID</span>
-          <img id="sort-arrow" src="img/sort-arrow.png" value="initial">
+          <img class="filters__arrow initial__arrow" src="img/sort-arrow.png">
         </th>
-        <th>First Name</th>
-        <th>Last Name</th>
-        <th>Position</th>
-        <th>Created date</th>
-        <th>Operate</th>
+        <th>
+          <span>First Name</span>
+          <img class="filters__arrow initial__arrow" src="img/sort-arrow.png">
+        </th>
+        <th>
+          <span>Last Name</span>
+          <img class="filters__arrow initial__arrow" src="img/sort-arrow.png">
+        </th>
+        <th>
+          <span>Position</span>
+          <img class="filters__arrow initial__arrow" src="img/sort-arrow.png">
+        </th>
+        <th>
+          <span>Created date</span>
+          <img class="filters__arrow initial__arrow" src="img/sort-arrow.png">
+        </th>
+        <th>
+          Operate
+        </th>
       </tr>
     </thead>
     <tbody id="tbody">
