--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
       <div class="filters__btn filters__equal"><span>=</span></div>
       <div class="filters__input-group">
         <input type="text" class="filters__input" id="input-col-val">
-        <button type="button" class="filters__close">
+        <button type="button" class="filters__close" id="clean-column">
           <span>&times;</span>
         </button> 
       </div>
     </div>
     <div class="filters__block-right">
       <div class="filters__input-group">
-        <input type="text" class="filters__input" placeholder="KEY">
-        <button type="button" class="filters__close">
+        <input type="text" class="filters__input" id="input-key" placeholder="KEY">
+        <button type="button" class="filters__close" id="clean-key">
           <span>&times;</span>
         </button> 
       </div>
@@ -139,6 +139,7 @@
   <script src="js/edit-worker.js"></script>
   <script src="js/filter-in-column.js"></script>
   <script src="js/sort-data.js"></script>
+  <script src="js/search-by-key.js"></script>
   <script src="js/index.js"></script>
 </body>
 </html>
