--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/global.css">
+  <link rel="stylesheet" href="css/checkbox.css">
   <link rel="stylesheet" href="css/filters.css">
   <link rel="stylesheet" href="css/table.css">
   <link rel="stylesheet" href="css/modal.css">
@@ -42,16 +43,51 @@
           <span>&times;</span>
         </button> 
       </div>
-      <button class="filters__btn filter filter-btn" id="filter-btn">
-        <img src="img/filter-icon.png" alt="filter" class="filters__icon filter-btn" id="filter-icon">
-      </button>
-      <ul id="filter-list" class="filters__dropdown-cont">
-        <li value="id">id</li>
-        <li value="firstName">first name</li>
-        <li value="lastName">last name</li>
-        <li value="position">position</li>
-        <li value="createdDate">created date</li>
-      </ul>
+      <div class="filters__dropdown">
+        <button class="filters__btn filter filter-btn" id="filter-btn">
+          <img src="img/filter-icon.png" alt="filter" class="filters__icon filter-btn" id="filter-icon">
+        </button>
+        <div id="filter-list" class="checkbox">
+          <div class="checkbox__inputs">
+            <div>
+              <div class="custom-control custom-checkbox my-1 mr-sm-2">
+                <input type="checkbox" class="custom-control-input" id="id">
+                <label class="custom-control-label" for="id">ID</label>
+              </div>
+              <div class="custom-control custom-checkbox my-1 mr-sm-2">
+                <input type="checkbox" class="custom-control-input" id="first-name">
+                <label class="custom-control-label" for="first-name">First Name</label>
+              </div>
+              <div class="custom-control custom-checkbox my-1 mr-sm-2">
+                <input type="checkbox" class="custom-control-input" id="last-name">
+                <label class="custom-control-label" for="last-name">Last Name</label>
+              </div>
+            </div>
+            <div>
+              <div class="custom-control custom-checkbox my-1 mr-sm-2">
+                <input type="checkbox" class="custom-control-input" id="position">
+                <label class="custom-control-label" for="position">Position</label>
+              </div>
+              <div class="custom-control custom-checkbox my-1 mr-sm-2">
+                <input type="checkbox" class="custom-control-input" id="created-date">
+                <label class="custom-control-label" for="created-date">Created Date</label>
+              </div>
+              <div class="custom-control custom-checkbox my-1 mr-sm-2">
+                <input type="checkbox" class="custom-control-input" id="operate">
+                <label class="custom-control-label" for="operate">Operate</label>
+              </div>
+            </div>
+          </div>
+          <hr>
+          <div class="checkbox__block-btn">
+            <div>
+              <span>All</span>
+              <span>Clear</span>
+            </div>
+            <span>Ok</span>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
@@ -75,7 +111,7 @@
           <img class="filters__arrow initial__arrow" src="img/sort-arrow.png">
         </th>
         <th>
-          <span>Created date</span>
+          <span>Created Date</span>
           <img class="filters__arrow initial__arrow" src="img/sort-arrow.png">
         </th>
         <th>
