add filter select functionality

--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
                 <label class="custom-control-label" for="id">ID</label>
               </div>
               <div class="custom-control custom-checkbox my-1 mr-sm-2">
-                <input type="checkbox" class="custom-control-input" id="first-name">
-                <label class="custom-control-label" for="first-name">First Name</label>
+                <input type="checkbox" class="custom-control-input" id="firstName">
+                <label class="custom-control-label" for="firstName">First Name</label>
               </div>
               <div class="custom-control custom-checkbox my-1 mr-sm-2">
-                <input type="checkbox" class="custom-control-input" id="last-name">
-                <label class="custom-control-label" for="last-name">Last Name</label>
+                <input type="checkbox" class="custom-control-input" id="lastName">
+                <label class="custom-control-label" for="lastName">Last Name</label>
               </div>
             </div>
             <div>
@@ -69,8 +69,8 @@
                 <label class="custom-control-label" for="position">Position</label>
               </div>
               <div class="custom-control custom-checkbox my-1 mr-sm-2">
-                <input type="checkbox" class="custom-control-input" id="created-date">
-                <label class="custom-control-label" for="created-date">Created Date</label>
+                <input type="checkbox" class="custom-control-input" id="createdDate">
+                <label class="custom-control-label" for="createdDate">Created Date</label>
               </div>
               <div class="custom-control custom-checkbox my-1 mr-sm-2">
                 <input type="checkbox" class="custom-control-input" id="operate">
@@ -84,7 +84,7 @@
               <span>All</span>
               <span>Clear</span>
             </div>
-            <span>Ok</span>
+            <span id="ok">Ok</span>
           </div>
         </div>
       </div>
