add clear & all buttons, operate options

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
           <hr>
           <div class="checkbox__block-btn">
             <div>
-              <span>All</span>
-              <span>Clear</span>
+              <span id="all">All</span>
+              <span id="clear">Clear</span>
             </div>
             <span id="ok">Ok</span>
           </div>
