--- a/index.html
+++ b/index.html
@@ -91,7 +91,37 @@
     </div>
   </div>
 
-  <table id="table" class="table"></table>
+  <table id="table" class="table">
+    <thead id="thead" class="thead-light">
+      <tr class="table__tr">
+        <th>
+          <span>ID</span>
+          <img class="filters__arrow initial__arrow" src="img/sort-arrow.png">
+        </th>
+        <th>
+          <span>First Name</span>
+          <img class="filters__arrow initial__arrow" src="img/sort-arrow.png">
+        </th>
+        <th>
+          <span>Last Name</span>
+          <img class="filters__arrow initial__arrow" src="img/sort-arrow.png">
+        </th>
+        <th>
+          <span>Position</span>
+          <img class="filters__arrow initial__arrow" src="img/sort-arrow.png">
+        </th>
+        <th>
+          <span>Created Date</span>
+          <img class="filters__arrow initial__arrow" src="img/sort-arrow.png">
+        </th>
+        <th>
+          Operate
+        </th>
+      </tr>
+    </thead>
+    <tbody id="tbody">
+    </tbody>
+  </table>
   
   <button id="add-new" type="button" class="btn btn-primary btn-success float-right" data-toggle="modal" data-target="#exampleModal">
     Add New
@@ -147,6 +177,7 @@
   <script src="js/get-local-worker.js"></script>
   <script src="js/set-local-worker.js"></script>
   <script src="js/create-worker.js"></script>
+  <script src="js/display-header.js"></script>
   <script src="js/display-workers.js"></script>
   <script src="js/delete-worker.js"></script>
   <script src="js/edit-worker.js"></script>
