fix sorted & filters functions

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <span>&times;</span>
         </button> 
       </div>
-      <div class="filters__dropdown">
+      <div class="filters__dropdown" id="filter-hide">
         <button class="filters__btn filter filter-btn" id="filter-btn">
           <img src="img/filter-icon.png" alt="filter" class="filters__icon filter-btn" id="filter-icon">
         </button>
