--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <form id="modal-form" class="modal-body">
+      <div id="modal-form" class="modal-body">
         <div class="input-group mb-3">
           <div class="input-group-prepend">
             <span class="input-group-text">First Name</span>
@@ -132,7 +132,7 @@
         </div>
       </а>
       <div class="modal-footer">
-        <button type="submit" id="modal-save-btn" class="btn btn-primary">
+        <button id="modal-save-btn" class="btn btn-primary">
           Save changes
         </button>
       </div>
